app/javascript/styles/mastodon/components.scss
/* ... */
.account__header__content {
  color: $darker-text-color;
  font-size: 14px;
  font-weight: 400;
  overflow: hidden;
  word-break: normal;
  word-wrap: break-word;

  p {
    margin-bottom: 20px;

    &:last-child {
      margin-bottom: 0;
    }
  }

  a {
    color: inherit;
    text-decoration: underline;

    &:hover {
      text-decoration: none;
    }
  }
}

.account__header {
  overflow: hidden;
  background: lighten($ui-base-color, 4%);

  &.inactive {
    opacity: 0.5;

    .account__header__image,
    .account__avatar {
      filter: grayscale(100%);
    }
  }

  &__info {
    position: absolute;
    top: 10px;
    inset-inline-start: 10px;
  }

  &__image {
    overflow: hidden;
    height: 145px;
    position: relative;
    background: darken($ui-base-color, 4%);

    img {
      object-fit: cover;
      display: block;
      width: 100%;
      height: 100%;
      margin: 0;
    }
  }

  &__bar {
    position: relative;
    padding: 0 20px;
    border-bottom: 1px solid lighten($ui-base-color, 12%);

    .avatar {
      display: block;
      flex: 0 0 auto;
      width: 94px;

      .account__avatar {
        background: darken($ui-base-color, 8%);
        border: 2px solid lighten($ui-base-color, 4%);
      }
    }
  }

  &__tabs {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    margin-top: -55px;
    padding-top: 10px;
    gap: 8px;
    overflow: hidden;
    margin-inline-start: -2px; // aligns the pfp with content below

    &__buttons {
      display: flex;
      align-items: center;
      gap: 8px;
      padding-top: 55px;
      overflow: hidden;

      .button {
        flex-shrink: 1;
        white-space: nowrap;

        @media screen and (max-width: $no-gap-breakpoint) {
          min-width: 0;
        }
      }

      .icon-button {
        border: 1px solid lighten($ui-base-color, 12%);
        border-radius: 4px;
        box-sizing: content-box;
        padding: 2px;
      }
    }

    &__name {
      margin-top: 16px;
      margin-bottom: 16px;

      .account-role {
        vertical-align: top;
      }

      .emojione {
        width: 22px;
        height: 22px;
      }

      h1 {
        font-size: 17px;
        line-height: 22px;
        color: $primary-text-color;
        font-weight: 700;
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;

        small {
          display: block;
          font-size: 15px;
          color: $darker-text-color;
          font-weight: 400;
          overflow: hidden;
          text-overflow: ellipsis;

          span {
            user-select: all;
          }
        }
      }
    }

    .spacer {
      flex: 1 1 auto;
    }
  }

  &__bio {
    .account__header__content {
      color: $primary-text-color;
    }

    .account__header__fields {
      margin: 0;
      margin-top: 16px;
      border-radius: 4px;
      background: darken($ui-base-color, 4%);
      border: 0;

      dl {
        display: block;
        padding: 11px 16px;
        border-bottom-color: lighten($ui-base-color, 4%);
      }

      dd,
      dt {
        font-size: 13px;
        line-height: 18px;
        padding: 0;
        text-align: initial;
      }

      dt {
        width: auto;
        background: transparent;
        text-transform: uppercase;
        color: $dark-text-color;
      }

      dd {
        color: $darker-text-color;
      }

      a {
        color: lighten($ui-highlight-color, 8%);
      }

      .verified {
        border: 1px solid rgba($valid-value-color, 0.5);
        margin-top: -1px;

        &:first-child {
          border-top-left-radius: 4px;
          border-top-right-radius: 4px;
          margin-top: 0;
        }

        &:last-child {
          border-bottom-left-radius: 4px;
          border-bottom-right-radius: 4px;
        }

        dt,
        dd {
          color: $valid-value-color;
        }

        a {
          color: $valid-value-color;
        }
      }
    }
  }

  &__extra {
    margin-top: 16px;

    &__links {
      font-size: 14px;
      color: $darker-text-color;
      margin: 0 -10px;
      padding-top: 16px;
      padding-bottom: 10px;

      a {
        display: inline-block;
        color: $darker-text-color;
        text-decoration: none;
        padding: 5px 10px;
        font-weight: 500;

        strong {
          font-weight: 700;
          color: $primary-text-color;
        }
      }
    }
  }

  &__account-note {
    color: $primary-text-color;
    font-size: 14px;
    font-weight: 400;
    margin-bottom: 10px;

    label {
      display: block;
      font-size: 12px;
      font-weight: 500;
      color: $darker-text-color;
      text-transform: uppercase;
      margin-bottom: 5px;
    }

    textarea {
      display: block;
      box-sizing: border-box;
      width: calc(100% + 20px);
      color: $secondary-text-color;
      background: transparent;
      padding: 10px;
      margin: 0 -10px;
      font-family: inherit;
      font-size: 14px;
      resize: none;
      border: 0;
      outline: 0;
      border-radius: 4px;

      &::placeholder {
        color: $dark-text-color;
        opacity: 1;
      }

      &:focus {
        background: $ui-base-color;
      }
    }
  }
}

.verified-badge {
  display: inline-flex;
  align-items: center;
  color: $valid-value-color;
  gap: 4px;
  overflow: hidden;
  text-overflow: ellipsis;

  a {
    color: inherit;
    font-weight: 500;
    text-decoration: none;
  }
}
/* ... */

